allprojects {
    group = 'com.novusforge.astrum'
    version = '0.0.1-PREDEVELOPMENT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java-library'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(libs.versions.java.get())
        }
    }

    dependencies {
        testImplementation libs.junit.jupiter
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
        options.release.set(21)
        options.compilerArgs << "--enable-preview" << "-Xlint:unchecked" << "-Xlint:preview"
    }

    test {
        useJUnitPlatform()
        jvmArgs += "--enable-preview"
    }
}
